Changelog for mk-slave-prefetch:

2010-02-01: version 1.0.15

   * --secondary-indexes queries did not use current database (issue 844).
   * Thread failed to start (issue 680).

2010-01-06: version 1.0.14

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-10-30: version 1.0.13

   * Tool died on unknown binary log event types (issue 606).
   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-09-30: version 1.0.12

   * Added --pid (issue 391).

2009-08-31: version 1.0.11

   * --ask-pass did not work.

2009-07-31: version 1.0.10

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).
   * Updates to shared code.

2009-06-30: version 1.0.9

   * Fixed "Option io-log does not exist" error (issue 414).
   * Updates to shared code.

2009-06-02: version 1.0.8

   * Script did not die if --pid file already existed (issue 383).

2009-05-03: version 1.0.7

   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --checkint long option. Use --check-interval instead.
   * Removed the --iolag long option.  Use --io-lag instead.
   * Removed the --maxquerytime option.  Use --max-query-time instead.
   * Removed the --setvars long option.  Use --set-vars instead.
   * Removed the --numprefix long option.  Use --num-prefix instead.
   * Removed the --permitregexp long option.  Use --permit-regexp instead.
   * Removed the --printnonrewritten long option.  Use --print-nonrewritten
     instead.
   * Removed the --querysampsize long option.  Use --query-sample-size instead.
   * Removed the --rejectregexp long option.  Use --reject-regexp instead.
   * Removed the --setvars long option.  Use --set-vars instead.
   * Removed the -i short option.  Use --check-interval instead.
   * Removed the -x short option.  Use --execute instead.
   * Removed the -l short option.  Use --io-lag instead.